--- a/e-learning/src/components/Quote.module.scss
+++ b/e-learning/src/components/Quote.module.scss
@@ -12,11 +12,11 @@ blockquote {
   position: relative;
   .text {
     font-family: var(--sans);
-    padding-left: calc(var(--ms-0) * 2);
+    padding-left: calc(var(--ms-0) * 1.75);
   }
   cite {
     color: var(--gray-60);
-    padding-left: calc(var(--ms-0) * 2);
+    padding-left: calc(var(--ms-0) * 1.75);
   }
   &:before {
     content: '“';
@@ -26,9 +26,6 @@ blockquote {
     color: var(--gray-80);
     left: 0.2em;
     top: -0.05em;
-    @include bp(m) {
-      top: 0;
-    }
   }
 }
 
