--- a/e-learning/src/components/_vars.scss
+++ b/e-learning/src/components/_vars.scss
@@ -36,7 +36,6 @@ $text-border: 2px solid var(--gray-30);
     text-decoration: underline;
     text-underline-offset: 0.15em;
     color: var(--blue-70);
-    text-decoration-color: var(--blue-70);
     text-decoration-style: dotted;
     &:hover,
     &:focus-visible {
